fix DT-1783, align social icons to the right

--- a/less/header-style.less
+++ b/less/header-style.less
@@ -63,6 +63,10 @@
             -webkit-order: 4;
             -ms-flex-order: 4;
             order: 4;
+            margin: 0 0 0 auto;
+            .social-list {
+                margin: 0 0 0 10px;
+            }
         }
         &.flex-nav {
             -webkit-box-ordinal-group: 4;
